--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "nib": "1.1.2",
     "scrollmagic": "^2.0.5",
     "stylus": "0.54.5",
+    "vue-awesome": "^3.1.3",
     "vue-ga": "1.0.0"
   }
 }
