--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "express-http-proxy": "1.0.1",
     "express-useragent": "1.0.7",
     "extract-text-webpack-plugin": "2.1.0",
+    "fastparse": "^1.0.0",
     "file-loader": "0.11.1",
     "friendly-errors-webpack-plugin": "1.6.1",
     "glob": "7.1.1",
     "http-proxy-middleware": "0.17.4",
     "jade": "1.11.0",
-    "jade-url-replace-loader": "^1.0.5",
     "jade-deps-loader": "zzz945/jade-deps-loader#1.0.0",
     "less-loader": "4.0.3",
     "morgan": "1.8.1",
@@ -62,10 +62,11 @@
     "webpack-dev-middleware": "1.10.2",
     "webpack-error-notification": "0.1.7",
     "webpack-hot-middleware": "2.18.0",
-    "webpack-manifest-plugin": "1.3.2",
+    "webpack-manifest-plugin": "2.0.0-rc.2",
     "webpack-md5-hash": "0.0.5",
     "webpack-merge": "4.1.0",
-    "webpack-notifier": "1.5.0"
+    "webpack-notifier": "1.5.0",
+    "write-file-webpack-plugin": "^4.4.1"
   },
   "dependencies": {
     "babel-watch": "2.0.6",
