--- a/package.json
+++ b/package.json
@@ -14,25 +14,18 @@
   "author": "zhangdaiyan <zhangdaiyan@vipkid.com.cn>",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "6.24.1",
+    "babel-core": "6.26.3",
     "babel-loader": "7.0.0",
-    "babel-plugin-import": "1.1.1",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "babel-watch": "2.0.7",
     "body-parser": "1.17.1",
     "colors": "1.1.2",
-    "connect-history-api-fallback": "1.3.0",
     "cookie-parser": "1.4.3",
     "copy-webpack-plugin": "4.0.1",
     "cross-env": "4.0.0",
     "css-loader": "0.28.0",
-    "ejs": "1.0.0",
-    "eventsource-polyfill": "0.9.6",
+    "ejs": "2.6.1",
     "express": "4.15.2",
     "express-http-proxy": "1.0.1",
     "express-useragent": "1.0.7",
@@ -47,13 +40,9 @@
     "jade-deps-loader": "zzz945/jade-deps-loader#1.0.0",
     "jade-loader": "0.8.0",
     "morgan": "1.8.1",
-    "object-assign": "4.1.1",
-    "opn": "4.0.2",
     "ora": "1.2.0",
-    "postcss-loader": "1.3.3",
     "prettyjson": "1.2.1",
     "raw-loader": "0.5.1",
-    "shelljs": "0.7.7",
     "style-loader": "0.16.1",
     "stylus-loader": "3.0.1",
     "url-loader": "0.5.8",
@@ -63,7 +52,6 @@
     "webpack-dev-middleware": "1.10.2",
     "webpack-error-notification": "0.1.7",
     "webpack-hot-middleware": "2.18.0",
-    "webpack-manifest-plugin": "2.0.0-rc.2",
     "webpack-md5-hash": "0.0.5",
     "webpack-merge": "4.1.0",
     "webpack-notifier": "1.5.0"
