--- a/package.json
+++ b/package.json
@@ -36,22 +36,22 @@
     "html-webpack-harddisk-plugin": "0.2.0",
     "html-webpack-plugin": "3.2.0",
     "http-proxy-middleware": "0.17.4",
-    "jade": "1.11.0",
-    "jade-deps-loader": "zzz945/jade-deps-loader#1.0.0",
-    "jade-loader": "0.8.0",
     "morgan": "1.8.1",
     "ora": "1.2.0",
     "prettyjson": "1.2.1",
+    "pug": "2.0.3",
+    "pug-loader": "2.4.0",
+    "pug-plain-loader": "1.0.0",
     "raw-loader": "0.5.1",
     "style-loader": "0.16.1",
     "stylus-loader": "3.0.1",
     "url-loader": "0.5.8",
-    "vue-loader": "12.0.0",
+    "vue-loader": "15.4.2",
     "vue-template-compiler": "2.5.17",
     "webpack": "3.5.4",
     "webpack-dev-middleware": "1.10.2",
     "webpack-error-notification": "0.1.7",
-    "webpack-hot-middleware": "2.18.0",
+    "webpack-hot-middleware": "2.24.3",
     "webpack-md5-hash": "0.0.5",
     "webpack-merge": "4.1.0",
     "webpack-notifier": "1.5.0"
