upgrade to babel 7, remove babel-preset-stage-2

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
-  "presets": ["es2015", "stage-2"],
-  "comments": false
+  "presets": [
+    "@babel/preset-env"
+  ],
+  "plugins": [
+    "@babel/plugin-transform-async-to-generator"
+  ]
 }
