--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@babel/core": "7.1.2",
     "@babel/plugin-transform-async-to-generator": "7.1.0",
     "@babel/preset-env": "7.1.0",
+    "autoprefixer": "9.2.0",
     "babel-loader": "8.0.4",
     "body-parser": "1.17.1",
     "colors": "1.1.2",
     "cookie-parser": "1.4.3",
     "copy-webpack-plugin": "4.0.1",
     "cross-env": "4.0.0",
-    "css-loader": "0.28.0",
+    "css-loader": "1.0.0",
     "ejs": "2.6.1",
     "express": "4.15.2",
     "express-http-proxy": "1.0.1",
@@ -34,14 +35,16 @@
     "http-proxy-middleware": "0.17.4",
     "morgan": "1.8.1",
     "ora": "1.2.0",
+    "postcss-loader": "3.0.0",
+    "postcss-preset-env": "6.1.1",
     "prettyjson": "1.2.1",
     "pug": "2.0.3",
     "pug-loader": "2.4.0",
     "pug-plain-loader": "1.0.0",
     "raw-loader": "0.5.1",
-    "style-loader": "0.16.1",
-    "stylus-loader": "3.0.1",
-    "url-loader": "0.5.8",
+    "style-loader": "0.23.1",
+    "stylus-loader": "3.0.2",
+    "url-loader": "1.1.2",
     "vue-loader": "15.4.2",
     "vue-template-compiler": "2.5.17",
     "webpack": "3.5.4",
