upgrade to webpack 4

--- a/package.json
+++ b/package.json
@@ -19,21 +19,22 @@
     "body-parser": "1.17.1",
     "colors": "1.1.2",
     "cookie-parser": "1.4.3",
-    "copy-webpack-plugin": "4.0.1",
+    "copy-webpack-plugin": "4.5.3",
     "cross-env": "4.0.0",
     "css-loader": "1.0.0",
     "ejs": "2.6.1",
     "express": "4.15.2",
     "express-http-proxy": "1.0.1",
     "express-useragent": "1.0.7",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "0.11.1",
+    "file-loader": "2.0.0",
     "friendly-errors-webpack-plugin": "1.6.1",
     "glob": "7.1.1",
     "html-webpack-harddisk-plugin": "0.2.0",
     "html-webpack-plugin": "3.2.0",
     "http-proxy-middleware": "0.17.4",
+    "mini-css-extract-plugin": "0.4.4",
     "morgan": "1.8.1",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
     "ora": "1.2.0",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.1.1",
@@ -44,16 +45,14 @@
     "raw-loader": "0.5.1",
     "style-loader": "0.23.1",
     "stylus-loader": "3.0.2",
+    "uglifyjs-webpack-plugin": "2.0.1",
     "url-loader": "1.1.2",
     "vue-loader": "15.4.2",
     "vue-template-compiler": "2.5.17",
-    "webpack": "3.5.4",
+    "webpack": "4.20.2",
     "webpack-dev-middleware": "1.10.2",
-    "webpack-error-notification": "0.1.7",
     "webpack-hot-middleware": "2.24.3",
-    "webpack-md5-hash": "0.0.5",
-    "webpack-merge": "4.1.4",
-    "webpack-notifier": "1.5.0"
+    "webpack-merge": "4.1.4"
   },
   "dependencies": {
     "cookies-js": "1.2.3",
