--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A Vue.js project",
   "main": "app.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development WEBPACK=css,html node ./bin/build.js",
     "start": "cross-env HMR=true NODE_ENV=development WEBPACK=all node app.js",
-    "release": "cross-env NODE_ENV=production node ./bin/build.js"
+    "release": "cross-env NODE_ENV=production node ./bin/build.js",
+    "analyzer": "webpack-bundle-analyzer ./build/prod/compilation-stats.json"
   },
   "author": "zhangdaiyan <zhangdaiyan@vipkid.com.cn>",
   "license": "MIT",
@@ -50,6 +50,7 @@
     "vue-loader": "15.4.2",
     "vue-template-compiler": "2.5.17",
     "webpack": "4.20.2",
+    "webpack-bundle-analyzer": "3.0.3",
     "webpack-dev-middleware": "1.10.2",
     "webpack-hot-middleware": "2.24.3",
     "webpack-merge": "4.1.4"
