--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
     "@babel/preset-env"
   ],
   "plugins": [
-    "@babel/plugin-transform-async-to-generator"
+    "@babel/plugin-transform-async-to-generator",
+    "@babel/plugin-syntax-dynamic-import"
   ]
 }
