--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "7.1.2",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0",
     "@babel/plugin-transform-async-to-generator": "7.1.0",
     "@babel/preset-env": "7.1.0",
     "autoprefixer": "9.2.0",
