--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "express-useragent": "1.0.7",
     "file-loader": "2.0.0",
     "friendly-errors-webpack-plugin": "1.6.1",
-    "fs-extra": "7.0.0",
     "glob": "7.1.1",
     "html-webpack-harddisk-plugin": "0.2.0",
     "html-webpack-plugin": "3.2.0",
@@ -44,14 +43,13 @@
     "pug": "2.0.3",
     "pug-loader": "2.4.0",
     "pug-plain-loader": "1.0.0",
+    "pug-webpack-plugin": "lingobus/pug-webpack-plugin#v0.0.2",
     "raw-loader": "0.5.1",
     "style-loader": "0.23.1",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
-    "tapable": "1.1.0",
     "uglifyjs-webpack-plugin": "2.0.1",
     "url-loader": "1.1.2",
-    "vm": "0.1.0",
     "vue-loader": "15.4.2",
     "vue-template-compiler": "2.5.17",
     "webpack": "4.20.2",
