--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "7.1.2",
     "@babel/plugin-syntax-dynamic-import": "7.0.0",
     "@babel/plugin-transform-async-to-generator": "7.1.0",
+    "@babel/plugin-transform-runtime": "7.1.0",
     "@babel/preset-env": "7.1.0",
     "autoprefixer": "9.2.0",
     "babel-loader": "8.0.4",
@@ -63,6 +64,7 @@
     "webpack-merge": "4.1.4"
   },
   "dependencies": {
+    "@babel/runtime": "7.1.5",
     "cookies-js": "1.2.3",
     "nib": "1.1.2"
   },
