--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ejs": "2.6.1",
     "express": "4.15.2",
     "express-http-proxy": "1.0.1",
+    "express-slash": "^2.0.1",
     "express-useragent": "1.0.7",
     "file-loader": "2.0.0",
     "friendly-errors-webpack-plugin": "1.6.1",
