--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "webpack-bundle-analyzer": "3.0.3",
     "webpack-dev-middleware": "3.4.0",
     "webpack-hot-middleware": "2.24.3",
-    "webpack-merge": "4.1.4"
+    "webpack-merge": "4.1.4",
+    "write-file-webpack-plugin": "^4.5.0"
   },
   "dependencies": {
     "@babel/runtime": "7.1.5",
