--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "url-loader": "1.1.2",
     "vue-loader": "15.4.2",
     "vue-template-compiler": "2.5.17",
+    "web-push": "^3.3.3",
     "webpack": "4.20.2",
     "webpack-bundle-analyzer": "3.0.3",
     "webpack-dev-middleware": "3.4.0",
