--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "style-loader": "0.23.1",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
+    "ts-loader": "^5.3.2",
+    "typescript": "^3.2.2",
     "uglifyjs-webpack-plugin": "2.0.1",
     "url-loader": "1.1.2",
     "vue-loader": "15.4.2",
