--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "html-webpack-harddisk-plugin": "0.2.0",
     "html-webpack-plugin": "3.2.0",
     "http-proxy-middleware": "0.17.4",
-    "mini-css-extract-plugin": "0.4.4",
+    "mini-css-extract-plugin": "0.5.0",
     "morgan": "1.8.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "ora": "1.2.0",
@@ -49,14 +49,14 @@
     "pug": "2.0.3",
     "pug-loader": "2.4.0",
     "pug-plain-loader": "1.0.0",
-    "pug-webpack-plugin": "lingobus/pug-webpack-plugin#0.0.5",
+    "pug-webpack-plugin": "lingobus/pug-webpack-plugin#v0.0.5",
     "raw-loader": "0.5.1",
     "style-loader": "0.23.1",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
     "ts-loader": "^5.3.2",
     "typescript": "^3.2.2",
-    "uglifyjs-webpack-plugin": "2.0.1",
+    "uglifyjs-webpack-plugin": "2.1.1",
     "url-loader": "1.1.2",
     "vue-loader": "15.4.2",
     "vue-template-compiler": "2.5.17",
